[package]
name = "arcmut"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/al8n/arcmut"
homepage = "https://github.com/al8n/arcmut"
documentation = "https://docs.rs/arcmut"
description = "Introduce ArcMut, utility for FFI."
license = "MIT/Apache-2.0"
rust-version = "1.56"
keywords = ["ffi", "arc", "bindings"]
categories = ["api-bindings"]

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
